<resources>
    <string name="app_name">Mir_mosaic</string>
    <string name="item1_title">Product List</string>
    <string name="item2_title">QR Scanner</string>
    <string name="item3_title">Calculator</string>
    <string name="item4_title">User</string>
    <string name="item5_title">About</string>
    <string name="section_format">Hello %1$d</string>
    <string-array name="titles">
        <item>Natural</item>
        <item>Skalini</item>
        <item>Alma</item>
        <item>Closeouts</item>
    </string-array>
    <string-array name="banner">
        <item>@drawable/album1</item>
        <item>@drawable/album2</item>
        <item>@drawable/album3</item>
        <item>@drawable/album4</item>
    </string-array>
    <string-array name="Natural">
        <item>ALASKA</item>
        <item>BALI</item>
        <item>CASCADES</item>
        <item>CERAMIQUE</item>
        <item>CITYSCAPE</item>
        <item>CLOUD 9</item>
        <item>COLOR PALETTE</item>
        <item>CRYSTAL SPRINGS</item>
        <item>DC METRO</item>
        <item>FIELD TILE</item>
        <item>GALAXY</item>
        <item>GEMS</item>
        <item>HAWAII</item>
        <item>ICELAND</item>
        <item>INKA</item>
        <item>JEWELS OF THE SEA</item>
        <item>MARBELLA</item>
        <item>MARMARA</item>
        <item>METALLICO</item>
        <item>MOLDINGS</item>
        <item>MYKONOS</item>
        <item>NETHERLANDS</item>
        <item>SAVANNAH</item>
        <item>SEATTLE</item>
        <item>SHELL</item>
        <item>SIERRA</item>
        <item>TUSCANY</item>
        <item>TUXEDO</item>
        <item>VALENCIA</item>
        <item>VERRE</item>
        <item>VIENNA</item>

    </string-array>
    <string-array name="Skalini">
        <item>ARTISTIC</item>
        <item>PANTHEON</item>
        <item>WATERJET</item>
        <item>SPECIAL ORDER</item>

    </string-array>
    <string-array name="Alma">
        <item>SOLID COLORS 0.6</item>
        <item>SOLID COLORS 0.8 SANDY</item>
        <item>SOLID COLORS 0.8 STELLA</item>
        <item>SOLID COLORS 0.8 PEARLY</item>
        <item>SOLID COLORS 0.8 FG</item>
        <item>SOLID COLORS GM</item>
        <item>STRIPES</item>
        <item>ARTISTIC MURALS</item>
        <item>BORDERS</item>
        <item>DEGRADES 0.6</item>
        <item>DEGRADES 0.8</item>
        <item>GRADIENT COLOR COMPOSITIONS 0.6</item>
        <item>MIX 0.6</item>
        <item>MIX 0.6 AMBER</item>
        <item>MIX 0.8</item>
        <item>PATTERNS 0.6</item>
        <item>PATTERNS 0.8</item>
        <item>ALMA GLAMOUR</item>
    </string-array>
    <string-array name="Closeouts">
        <item>ETHNIC FIRE DANCE</item>
        <item>PLT-2,RDK</item>
        <item>ETHNIC</item>
        <item>ROYAL DARK 2</item>
    </string-array>
    <string-array name="alaskaItemName">
        <item>ICICLE</item>
        <item>GLACIER SPARKLE</item>
        <item>GLACIER CRACKLE</item>
        <item>GLACIER BEACH</item>
        <item>GLACIER PEARL</item>
        <item>GLACIER STONE</item>
        <item>ALASKAN HERRING</item>
        <item>GLACIER BRICK</item>
        <item>ALASKAN PEARL</item>
        <item>PEARL ISLAND</item>
    </string-array>
    <string-array name="alaskaItemCode">
        <item>HTC-516-M</item>
        <item>MOK-013</item>
        <item>MOK-014</item>
        <item>MOK-015</item>
        <item>MOK-016</item>
        <item>MOK-020</item>
        <item>ALA-07</item>
        <item>ALA-08</item>
        <item>ALA-S10</item>
        <item>ALA-C11</item>
    </string-array>
    <string-array name="alaskaItemCost">
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
    </string-array>
    <string-array name="alaskaItemMaterial">
        <item>glass,stone</item>
        <item>glass,stone</item>
        <item>glass,ceramics</item>
        <item>glass,shell</item>
        <item>glass</item>
        <item>glass,Bianco Carrara</item>
        <item>glass</item>
        <item>glass</item>
        <item>Thassos/Shell</item>
        <item>Thassos/Shell</item>
    </string-array>
    <string-array name="alaskaItemImg">
        <item>@drawable/htc516m</item>
        <item>@drawable/mok013</item>
        <item>@drawable/mok014</item>
        <item>@drawable/mok015</item>
        <item>@drawable/mok016</item>
        <item>@drawable/mok020</item>
        <item>@drawable/ala07</item>
        <item>@drawable/ala08</item>
        <item>@drawable/alas10</item>
        <item>@drawable/alac11</item>
    </string-array>
    <string-array name="alaskaid">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="baliItemName">
        <item>INDI CARRARA</item>
        <item>PACIFIC RIM CARRARA</item>
        <item>MANTRA CARRARA</item>
        <item>BALINESE CARRARA</item>
        <item>BATIK CARRARA</item>
        <item>SUMATRA CARRARA</item>
        <item>BALIAN CARRARA</item>
        <item>INDI WOODEN GRAY</item>
        <item>PACIFIC RIM WOODEN GRAY</item>
        <item>MANTRA WOODEN GRAY</item>
        <item>BALINESE WOODEN GRAY</item>
        <item>BATIK WOODEN GRAY</item>
        <item>SUMATRA WOODEN GRAY</item>
        <item>BALIAN WOODEN GRAY</item>
        <item>INDI CREMA</item>
        <item>PACIFIC RIM CREMA</item>
        <item>MANTRA CREMA</item>
        <item>BALINESE CREMA</item>
        <item>BATIK CREMA</item>
        <item>SUMATRA CREMA</item>
        <item>BALIAN CREMA</item>
        <item>LEAF CARRARA</item>
        <item>LEAF WOODEN</item>
        <item>LEAF CREMA</item>

    </string-array>
    <string name="sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut augue elit, aliquet ut elementum eget, fermentum non massa. Donec nec sem nec arcu sagittis porta. Integer tincidunt placerat pellentesque. Vestibulum consectetur commodo mollis. Vivamus vel justo et nisl pulvinar bibendum. Nullam sit amet sapien vel nulla varius aliquet in nec est. Praesent sed enim at nulla maximus scelerisque nec in nisi. Etiam vestibulum, nisl in mollis sagittis, purus nunc auctor tellus, eu ultrices arcu nunc vel nulla. Vivamus et tortor eu dolor pellentesque aliquam sit amet a ligula.

Aenean quis consequat ipsum. Vivamus bibendum fermentum odio, nec malesuada massa venenatis vel. Curabitur at euismod mi. Praesent eu egestas elit. Etiam in elementum nisl, at facilisis ex. Sed eget elementum sapien. Integer et ultrices ipsum. Cras euismod justo sed dolor elementum tempus. Nulla nisi ipsum, sagittis sit amet ante sagittis, finibus efficitur justo. In vel tincidunt tellus.

Praesent iaculis ullamcorper laoreet. Vivamus convallis varius ex ornare commodo. Proin lectus odio, aliquet quis aliquet vitae, pretium a arcu. Pellentesque quam quam, gravida sed efficitur a, facilisis laoreet lorem. Sed scelerisque ullamcorper elementum. Pellentesque dui felis, convallis eu auctor non, ultricies in orci. Nullam tristique nisl nisl. Sed viverra et lacus vel eleifend.

Proin ac risus felis. Nam interdum odio sapien, sed dapibus justo sagittis vel. Donec eu eros felis. Nam at diam congue, convallis lectus a, feugiat augue. Nam non volutpat velit, sed elementum enim. In et arcu feugiat, pharetra ligula sit amet, volutpat ligula. Morbi euismod, erat ac volutpat auctor, mi nibh auctor arcu, a volutpat felis felis sit amet justo. Mauris tempor augue eget enim ullamcorper, at lobortis metus commodo. Fusce pharetra efficitur tortor. Fusce a pulvinar ante.

Vestibulum euismod velit quis malesuada tincidunt. Nam sodales nunc eros, vel posuere libero imperdiet id. Aliquam sodales facilisis auctor. Mauris vestibulum metus nibh, in cursus orci auctor sed. Etiam ut porttitor dolor. Pellentesque felis enim, maximus ultrices iaculis vel, iaculis id est. Nullam facilisis ornare ex, aliquam iaculis diam finibus sit amet. Sed interdum, arcu eget sollicitudin convallis, lorem eros feugiat est, fermentum imperdiet ipsum nisi id ex. Pellentesque in diam pulvinar, egestas neque et, feugiat ipsum. Sed ex odio, malesuada id finibus eu, facilisis rhoncus diam. Nunc pretium massa non mauris sollicitudin, id rutrum mi faucibus. Praesent eros tellus, commodo a sem vehicula, porta sodales justo. Suspendisse non mollis felis, sed luctus justo. Sed congue dui ac nulla pellentesque rhoncus. Nunc sagittis auctor ipsum. Praesent hendrerit magna tellus, eget tempus dolor dapibus nec.</string>
    <string name="simple_fragment_transition">item</string>
    <string-array name="baliid">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="baliItemCode">
        <item>BL-01CA</item>
        <item>BL-02CA</item>
        <item>BL-03CA</item>
        <item>BL-04CA</item>
        <item>BL-05CA</item>
        <item>BL-06CA</item>
        <item>BL-O7CA</item>
        <item>BL-01WG</item>
        <item>BL-02WG</item>
        <item>BL-03WG</item>
        <item>BL-04WG</item>
        <item>BL-05WG</item>
        <item>BL-06WG</item>
        <item>BL-07WG</item>
        <item>BL-01CM</item>
        <item>BL-02CM</item>
        <item>BL-03CM</item>
        <item>BL-04CM</item>
        <item>BL-05CM</item>
        <item>BL-06CM</item>
        <item>BL-07CM</item>
        <item>BL-O8CA</item>
        <item>BL-08WG</item>
        <item>BL-08CM</item>
    </string-array>
    <string-array name="baliItemCost">
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
        <item>__$</item>
    </string-array>
    <string-array name="baliItemMaterial">
        <item>Bianco Carrara</item>
        <item>Bianco Carrara</item>
        <item>Bianco Carrara/Glass</item>
        <item>Bianco Carrara/Glass</item>
        <item>Glass</item>
        <item>Bianco Carrara</item>
        <item>Bianco Carrara</item>
        <item>Wooden Gray</item>
        <item>Wooden Gray</item>
        <item>Wooden Gray/Glass</item>
        <item>Wooden Gray/Glass</item>
        <item>Glass</item>
        <item>Wooden Gray</item>
        <item>Wooden Gray</item>
        <item>Crema Marfil</item>
        <item>Crema Marfil</item>
        <item>Crema Marfil/Glass</item>
        <item>Crema Marfil/Glass</item>
        <item>Glass</item>
        <item>Crema Marfil</item>
        <item>Crema Marfil</item>
        <item>Bianco Carrara</item>
        <item>Wooden Gray</item>
        <item>Crema Marfil</item>
    </string-array>
</resources>